Solve overflow-x issue and classNames issue for Cards

--- a/the-luxe/src/components/Cards/Reserve-Card.css
+++ b/the-luxe/src/components/Cards/Reserve-Card.css
@@ -1,4 +1,4 @@
-.card-container{
+.reserve{
     max-width: 18rem;
     min-height: 8rem;
     color: #455d58;
@@ -8,7 +8,7 @@
 }
 
 @media (max-width:450px) {
-    .card-container{
+    .reserve{
         margin: 0 auto;
     }
 }
