--- a/the-luxe/src/components/Rooms-Section/RoomsSection.css
+++ b/the-luxe/src/components/Rooms-Section/RoomsSection.css
@@ -2,6 +2,7 @@
     padding: 7rem 0;
     background-color: #455d58;
     height: 100%;
+    overflow: hidden;
 }
 
 .hotel-room {
